Fix perfect alignment of email input and access button across all screen sizes

--- a/assets/popup.css
+++ b/assets/popup.css
@@ -7,9 +7,9 @@
 }
 
 .submit-btn {
-  width: 310px !important;
+  width: 324px !important;
   height: 48px !important;
-  font-size: var(--t-b-3-size);
+  font-size: var(--t-b-2-size);
   display: flex;
   justify-content: space-between;
   margin: 0;
@@ -25,7 +25,7 @@
 }
 
 input::placeholder {
-  font-size:var(--t-b-3-size); 
+  font-size:var(--t-b-2-size); 
   font-weight:var(--t-b-2-weight); 
   line-height:var(--t-b-2-line-height);
   color: var(--text);
@@ -97,13 +97,13 @@ input:focus {
   .emailaddr{
     width: 90% !important;
     height: 40px !important;
-    font-size: var(--t-b-3-size) !important;
+    font-size: var(--t-b-2-size) !important;
     margin: 0 auto !important;
   }
   .submit-btn {
     height: 40px !important;
     width: 90% !important;
-    font-size: var(--t-b-3-size) !important;
+    font-size: var(--t-b-2-size) !important;
     margin: 0 auto !important;
   }
   .popup-header{
@@ -114,10 +114,6 @@ input:focus {
   .popup-sub-header{
      /* Centering text for a cleaner look on tablets */
     text-align: center;
-    margin-left: 0 !important;
-  }
-  
-  .email-signup-container {
     margin-left: 0 !important;
   }
   #popup-content {
@@ -148,7 +144,7 @@ input:focus {
   .submit-btn {
     height: 40px !important;
     width: 90% !important;
-    font-size: var(--t-b-3-size) !important;
+    font-size: var(--t-b-2-size) !important;
     margin: 0 auto !important;
   }
 
